--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -29,15 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
-    sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
+    sdk: flutterf
 
   flutter_screenutil: ^5.9.3 # 반응형 디자인
   gap: ^3.0.1 # UI 요소 간 간격
@@ -48,6 +40,14 @@ dev_dependencies:
   http: ^1.2.2 # API 호출
 
   flutter_dotenv: ^5.0.2 # 환경설정
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.8
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
