feat: 뒤로가기 버튼을 두 번 누를 시 앱 종료하는 기능 추가

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
   flutter_screenutil: ^5.9.3 # 반응형 디자인
+  fluttertoast: ^8.2.8 # 토스트 메시지
   gap: ^3.0.1 # UI 요소 간 간격
   intl: ^0.20.0 # 날짜 및 시간 변환
   provider: ^6.0.5 # 상태 관리
