--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   scroll_to_index: ^3.0.1 # 원하는 위치로 스크롤
 
   http: ^1.2.2 # API 호출
+  url_launcher: ^6.3.1 # URL 열기
 
   shared_preferences: ^2.3.4 # 로컬 저장
 
