--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,4 +1,4 @@
-name: frontend
+name: "frontend"
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,12 +38,12 @@ dependencies:
   provider: ^6.0.5 # 상태 관리
   scroll_to_index: ^3.0.1 # 원하는 위치로 스크롤
   country_flags: ^3.2.0 # 국기 표시
+  flutter_spinkit: ^5.2.1 # 로딩 표시
 
   http: ^1.2.2 # API 호출
   url_launcher: ^6.3.1 # URL 열기
 
   shared_preferences: ^2.3.4 # 로컬 저장
-
   flutter_dotenv: ^5.0.2 # 환경설정
 
   # The following adds the Cupertino Icons font to your application.
@@ -73,6 +73,8 @@ flutter:
   assets:
     - assets/config/.env
     - assets/icons/teams/
+    - assets/icons/logo/
+    - assets/images/
   fonts:
     - family: Pretendard
       fonts:
