feat: Firebase 연동 및 소셜 로그인 추가

--- a/.gitignore
+++ b/.gitignore
@@ -224,6 +224,10 @@ dist
 .history
 .ionide
 
+### Firebase ###
+firebase_options.dart
+google-services.json
+
 ### Environment Configuration ###
 assets/config/.env
 
