--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  kakao_flutter_sdk_user: ^1.9.6 # 카카오 로그인
   flutter_screenutil: ^5.9.3 # 반응형 디자인
   fluttertoast: ^8.2.8 # 토스트 메시지
   gap: ^3.0.1 # UI 요소 간 간격
@@ -39,9 +40,15 @@ dependencies:
   scroll_to_index: ^3.0.1 # 원하는 위치로 스크롤
   country_flags: ^3.2.0 # 국기 표시
   flutter_spinkit: ^5.2.1 # 로딩 표시
+  social_login_buttons: ^1.0.7 # 소셜 로그인 버튼
+  google_sign_in: ^6.2.2 # 구글 로그인
 
   http: ^1.2.2 # API 호출
   url_launcher: ^6.3.1 # URL 열기
+
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.0
 
   shared_preferences: ^2.3.4 # 로컬 저장
   flutter_dotenv: ^5.0.2 # 환경설정
@@ -74,7 +81,7 @@ flutter:
     - assets/config/.env
     - assets/icons/teams/
     - assets/icons/logo/
-    - assets/images/
+    - assets/images/login/
   fonts:
     - family: Pretendard
       fonts:
